unpackaged/main/default/objects/Business_Unit_Contact_Role__c/Business_Unit_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Business Unit Contact Role</label>
    <nameField>
        <displayFormat>BUCR-{00000}</displayFormat>
        <label>Business Unit Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Unit Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>