unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Unit Contact Roles</relationshipLabel>
    <relationshipName>Business_Unit_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>