unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Unit Contact Roles</relationshipLabel>
    <relationshipName>Business_Unit_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>