unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Days_Since_Last_Sentiment_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Sentiment_Update__c</fullName>
    <formula>IF(ISBLANK(Sentiment_Last_Updated_Date__c),NULL,today()-Sentiment_Last_Updated_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Sentiment Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>