unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Email_From_Polytomic__c.field-meta.xml
<CustomField>
    <fullName>Email_From_Polytomic__c</fullName>
    <label>Email from Polytomic</label>
    <type>Email</type>
</CustomField>