unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary?</label>
    <type>Checkbox</type>
</CustomField>