unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Notes_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Notes_Last_Updated_Date__c</fullName>
    <label>Notes Last Updated Date</label>
    <type>Date</type>
</CustomField>