unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Org_SID__c.field-meta.xml
<CustomField>
    <fullName>Org_SID__c</fullName>
    <description>The org this Security contact relates to. Used as a mapping for the sync from the Product through Polytomic</description>
    <externalId>true</externalId>
    <inlineHelpText>Only populated for Security Contacts, and indicates the org this Security Contact came from</inlineHelpText>
    <label>Org SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>