unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score__c</fullName>
    <formula>(
  CASE(Sentiment__c, &quot;High&quot;, 1, &quot;Medium&quot;, 2, &quot;Low&quot;, 3, 0) +
  CASE(Scope__c, &quot;High&quot;, 1, &quot;Medium&quot;, 2, &quot;Low&quot;, 3, 0) +
  CASE(Advocacy__c, &quot;High&quot;, 1, &quot;Medium&quot;, 2, &quot;Low&quot;, 3, 0)
) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>