unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Relationship_Summary__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Summary__c</fullName>
    <formula>CASE(ROUND(Relationship_Score__c,0),
  3,&quot;High&quot;,
  2,&quot;Medium&quot;,
  &quot;Low&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Summary</label>
    <type>Text</type>
</CustomField>