unpackaged/main/default/objects/Business_Unit_Contact_Role__c/fields/Sentiment_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Last_Updated_Date__c</fullName>
    <label>Sentiment Last Updated Date</label>
    <type>Date</type>
</CustomField>