unpackaged/main/default/objects/Business_Unit_Contact_Role__c/validationRules/Require_Email_or_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_or_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(  Contact__c ) , ISBLANK( Email_From_Polytomic__c )
)</errorConditionFormula>
    <errorMessage>Contact roles require one of Email or Contact to be populated</errorMessage>
</ValidationRule>